
* The Output dockable (and its variants used elsewhere) has been
improved as follows:

  - Its vertical scroll position is maintained more carefully, when
    messages are printed incrementally.

  - Performance of printing messages repeatedly has improved slightly,
    with less load on the GUI thread.

  - Highlighting works via mouse hovering alone, without requiring
    C-modifier. Double click selects that area.

* An active highlight area in the input buffer or output panel may be
selected via double-click.

* The "Documentation" panel supports plain text files again, notably
"jedit-changes". This was broken in Isabelle2022, Isabelle2023,
Isabelle2024.

* Update to jEdit 5.7.0, the latest release.


*** Isabelle/VSCode Prover IDE ***

* General improvements: Persistent decorations for PIDE markup, correct
font and formatting in panels, and proper completions. Moreover, the
PIDE extension of the LSP now features additional protocol messages
(e.g. to obtain the set of Isabelle symbols) and more fine-grained
control for recoding of Unicode symbols.

* Active "sendback" markup can now be used via LSP code actions, e.g. to
insert proof methods from Sledgehammer output.

* Relevant Isabelle options can now be overriden from the
Isabelle/VSCode extension settings.


*** HOL ***

* Sledgehammer:
  - Added instantiations of facts using the "of" attribute
    (e.g. "assms(1)[of x]"), which can be activated using the
    Sledgehammer option "suggest_of" (default: smart, i.e. only if
    preplaying failed).  This uses Metis internally to infer the
    variable instantiations (see below).
  - Added extensionality (fact "ext") to some "metis (lifting)" calls.
  - Use pretty-printing to format suggested one-line proofs.

* Metis:
  - Added inference of variable instantiations, which can be activated
    using the configuration option "metis_suggest_of" (default: false).
    This outputs a suggestion with instantiations of the facts using the